Finishes testing, cleanup, adds license